objects/Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <label>Birth Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_Years__c</fullName>
        <label>Experience Years</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <label>Licenses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Assigned__c</fullName>
        <label>Task Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landscape Architect</fullName>
                </value>
                <value>
                    <fullName>Urban Planner</fullName>
                </value>
                <value>
                    <fullName>Civil Engineer</fullName>
                </value>
                <value>
                    <fullName>Traffic Planner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MEMBER-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>